<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.repo_info.RepoInfoFragment">

    <TextView
        android:id="@+id/title"
        style="@style/text_view_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repository_info"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_title"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/name"
        style="@style/text_view_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/name_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="name, name_title" />

    <TextView
        android:id="@+id/full_name_title"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_barrier" />

    <TextView
        android:id="@+id/full_name"
        style="@style/text_view_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/name_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/full_name_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="full_name, full_name_title" />

    <TextView
        android:id="@+id/size_title"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name_barrier" />

    <TextView
        android:id="@+id/size"
        style="@style/text_view_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/full_name_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/size_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="size, size_title" />

    <TextView
        android:id="@+id/watchers_count_title"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchers_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/size_barrier" />

    <TextView
        android:id="@+id/watchers_count"
        style="@style/text_view_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/size_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/watchers_count_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="watchers_count,watchers_count_title" />

    <TextView
        android:id="@+id/language_title"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watchers_count_barrier" />

    <TextView
        android:id="@+id/language"
        style="@style/text_view_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/watchers_count_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/language_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="language, language_title" />

    <TextView
        android:id="@+id/forks_count_title"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forks_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_barrier" />

    <TextView
        android:id="@+id/forks_count"
        style="@style/text_view_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/language_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/forks_count_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="forks_count, forks_count_title" />

    <TextView
        android:id="@+id/forks_title"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forks"
        app:layout_constraintBottom_toTopOf="@id/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forks_count_barrier"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/forks"
        style="@style/text_view_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/return_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/forks_count_barrier"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="name_title, full_name_title, size_title, watchers_count_title, language_title, forks_count_title, forks_title" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>